# aliyun-sls-agent-skills

./: .gitignore  MANIFEST.in  README.md  README_CN.md  pyproject.toml
.agents/skills/alibabacloud-sls-cli-guidance/: SKILL.md
.agents/skills/alibabacloud-sls-cli-guidance/references/: cli-installation-guide.md  index.md  project-example.md  project.md  put-logs.md  query-logs-example.md  query-logs.md  text-to-sql-example.md  text-to-sql.md
.agents/skills/aliyun-sls-cli/: SKILL.md
.agents/skills/aliyun-sls-cli-guidance/: SKILL.md
.agents/skills/aliyun-sls-cli-guidance/references/: index-example.md  logstore-example.md  put-logs-example.md  query-logs-example.md
.agents/skills/aliyun-sls-cli/refrences/: index-example.md
.cursor-plugin/: plugin.json
.github/workflows/: package-skills.yml  validate-skill.yml
scripts/: package-skills.sh
skills/alibabacloud-sls-cli-guidance/references/: alibabacloud-sls-query-installation.md  logstore.md  logtail-config.md  machine-group.md  project.md  put-json-logs.md  troubleshooting.md
src/aliyun_sls_agent_skills/: __init__.py  main.py
